k8s/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      release: canary
  template:
    metadata:
      labels:
        app: flask-app
        release: canary
    spec:
      containers:
      - name: flask-app
        image: kikyputraa/devops-playground:latest
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-canary
spec:
  selector:
    app: flask-app
    release: canary
  ports:
  - port: 80
    targetPort: 5000
