k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  selector:
    app: flask-web
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30001
