k8s/ingress-canary-logic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-canary 
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
  - host: flask.devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service-canary 
            port:
              number: 80
