k8s/ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-main  
spec:
  ingressClassName: nginx
  rules:
  - host: flask.devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service-stable 
            port:
              number: 80
