k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: flask.devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service-prod  # Ke Prod
            port:
              number: 80
  - host: staging.flask.devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service-staging # Ke Staging
            port:
              number: 80
